# libpython-template

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  cookiecutter.json  copier.yaml
docs/: CONTRIBUTING.md
hooks/: post_gen_project.sh
scripts/: install_git-hooks
template/: .pre-commit-config.yaml  README.md.jinja  pyproject.toml.jinja  tox.ini.jinja
template/.github/: CODEOWNERS.jinja
template/.github/workflows/: coveralls.yaml.jinja  validate-code.yaml.jinja
template/scripts/: run_tests.jinja  update_copier-templates  update_dependencies.jinja
{{cookiecutter.repository_name}}/: README.md  pdm.toml  pyproject.toml  tox.ini
{{cookiecutter.repository_name}}/.github/: CODEOWNERS
{{cookiecutter.repository_name}}/.github/workflows/: validate-code.yaml
{{cookiecutter.repository_name}}/examples/: demonstrator.py
{{cookiecutter.repository_name}}/scripts/: demonstrator.py
{{cookiecutter.repository_name}}/tests/: test_component.py  test_functions.py
{{cookiecutter.repository_name}}/{{cookiecutter.package_namespace}}/{{cookiecutter.package_name}}/: __init__.py
